# DynaMind-QGIS

./: CMakeLists.txt
src/DynaMind-QGis-Plugin/: CMakeLists.txt  guiprefdynamind.cpp  guiprefdynamind.h  guiprefdynamind.ui  icons.qrc  qgisdynamind.cpp  qgisdynamind.h
src/QGis-DynaMindModules/: CMakeLists.txt  guiqgisdynamindexport.cpp  guiqgisdynamindexport.h  guiqgisdynamindexport.ui  guiqgisdynamindimport.cpp  guiqgisdynamindimport.h  guiqgisdynamindimport.ui  qgisdynamindexport.cpp  qgisdynamindexport.h  qgisdynamindimport.cpp  qgisdynamindimport.h  qgisdynamindmodules.cpp
